--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Index</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="../fonts/fonts.css">
         <link rel="stylesheet" href="../styles/style.css">
     </head>
     <body>
@@ -16,7 +17,12 @@
             </div>
         <![endif]-->
 
-        <h1>Hello, World!</h1>
+        <h1 class="title">
+            Hello, World!
+        </h1>
+        <p>
+            Streamline your proposal process like never before in a Quote Management System:
+        </p>
 
         <!-- Outline.js -->
         <script src="../vendors/outline/outline.js"></script>
