--- a/development/styles/_root.css
+++ b/development/styles/_root.css
@@ -1,6 +1,6 @@
 /* stylelint-disable declaration-colon-space-after */
 :root {
-    --font_family_default: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica Neue, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    --font_family_heading: Georgia, Times, "Times New Roman", serif;
+    --font-text: "Jost", sans-serif;
+    --font-headings: "Evolventa", sans-serif;
 }
 /* stylelint-enable declaration-colon-space-after */
