--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -1,8 +1,8 @@
 @import url("../vendors/normalize/normalize.css");
-@import url("../vendors/magnific-popup/dist/magnific-popup.css");
 @import url("_html.css");
 @import url("_body.css");
 @import url("_button.css");
 @import url("_root.css");
 @import url("_universal.css");
 @import url("_visuallyhidden.css");
+@import url("_title.css");
