.sharing, .title, .container, variables init

--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -17,12 +17,30 @@
             </div>
         <![endif]-->
 
-        <h1 class="title">
-            Hello, World!
-        </h1>
-        <p>
-            Streamline your proposal process like never before in a Quote Management System:
-        </p>
+        <section class="sharing container">
+            <h2 class="sharing__heading title">
+                Smart product sets&nbsp;sharing
+            </h2>
+            <div class="sharing__body">
+                <img class="sharing__illustration"
+                     srcset="../content/sharing@2x.jpg"
+                     src="../content/sharing.jpg"
+                     width="513"
+                     height="342"
+                     alt=""
+                >
+                <div class="sharing__description wysiwyg">
+                    <p>
+                        Forget about files and data parsing.<br>
+                        Share your product selections as an interactive catalog tuned to the needs of a specific partner. Join it to a new workspace in one click and immediately start to use products.
+                    </p>
+                    <p>
+                        Share promotions, sales pitches and key points, unique selling propositions and experts chat channel attached to the product.
+                    </p>
+                </div>
+            </div>
+        </section>
+
 
         <!-- Outline.js -->
         <script src="../vendors/outline/outline.js"></script>
