--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -6,3 +6,6 @@
 @import url("_universal.css");
 @import url("_visuallyhidden.css");
 @import url("_title.css");
+@import url("_wysiwyg.css");
+@import url("_container.css");
+@import url("_sharing.css");
