--- a/development/styles/_body.css
+++ b/development/styles/_body.css
@@ -4,6 +4,8 @@ body {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     font-family: var(--font-text);
-    font-size: 20px;
-    line-height: 28px;
+    font-size: var(--base-font-size);
+    line-height: var(--base-line-height);
+    letter-spacing: 0.5px;
 }
+
