--- a/development/styles/_root.css
+++ b/development/styles/_root.css
@@ -2,5 +2,17 @@
 :root {
     --font-text: "Jost", sans-serif;
     --font-headings: "Evolventa", sans-serif;
+    --container-padding: 40px;
+    --base-font-size: 20px;
+    --base-line-height: 29px;
 }
 /* stylelint-enable declaration-colon-space-after */
+
+
+@media (max-width: 599px) {
+    :root {
+        --container-padding: 20px;
+        --base-font-size: 16px;
+        --base-line-height: 23px;
+    }
+}
