sharing illustration max-width on mobile

--- a/development/styles/_sharing.css
+++ b/development/styles/_sharing.css
@@ -42,7 +42,7 @@
             /*gap: 54px;*/
         }
             .sharing__illustration {
-                width: 335px;
+                max-width: 100%;
                 height: auto;
             }
 
