--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -17,6 +17,55 @@
             </div>
         <![endif]-->
 
+        <section class="start container">
+            <div class="start__heading title">
+                Easy start
+            </div>
+            <div class="start__body">
+                <div class="start__item">
+                    <div class="start__preview">
+                        <img class="start__illustration"
+                             srcset="../content/start-a@2x.jpg 2x"
+                             src="../content/start-a.jpg"
+                             width="300"
+                             height="267"
+                             alt=""
+                        >
+                    </div>
+                    <div class="start__description">
+                        Connect an existing data source, upload a file or create your own product set manually.
+                    </div>
+                </div>
+                <div class="start__item">
+                    <div class="start__preview">
+                        <img class="start__illustration"
+                             srcset="../content/start-b@2x.jpg 2x"
+                             src="../content/start-b.jpg"
+                             width="300"
+                             height="238"
+                             alt=""
+                        >
+                    </div>
+                    <div class="start__description">
+                        Join a ready-to-use catalog of your supplier in one click. Forget the worries about data accuracy and currency.
+                    </div>
+                </div>
+                <div class="start__item">
+                    <div class="start__preview">
+                        <img class="start__illustration"
+                             srcset="../content/start-c@2x.jpg 2x"
+                             src="../content/start-c.jpg"
+                             width="300"
+                             height="231"
+                             alt=""
+                        >
+                    </div>
+                    <div class="start__description">
+                        Tune product data with the built-in CMS. Receive data updates from any external source or use always actual supplier’s catalogs.
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="sharing container">
             <h2 class="sharing__heading title">
                 Smart product sets&nbsp;sharing
