--- a/development/styles/_container.css
+++ b/development/styles/_container.css
@@ -1,8 +1,7 @@
 .container {
     margin-left: auto;
     margin-right: auto;
-    min-width: 1160px;
-    max-width: 1440px;
+    width: 1190px;
     border-left: var(--container-padding) solid transparent;
     border-right: var(--container-padding) solid transparent;
 }
@@ -10,7 +9,7 @@
 @media (max-width: 599px) {
 
     .container {
-        min-width: 0;
+        width: auto;
         max-width: 400px;
     }
 }
