--- a/development/layouts/index.html
+++ b/development/layouts/index.html
@@ -18,9 +18,9 @@
         <![endif]-->
 
         <section class="start container">
-            <div class="start__heading title">
+            <h2 class="start__heading title">
                 Easy start
-            </div>
+            </h2>
             <div class="start__body">
                 <div class="start__item">
                     <div class="start__preview">
@@ -86,6 +86,27 @@
                     <p>
                         Share promotions, sales pitches and key points, unique selling propositions and experts chat channel attached to the product.
                     </p>
+                </div>
+            </div>
+        </section>
+        <section class="catalog">
+            <div class="catalog__wrap container">
+                <h2 class="catalog__heading title">
+                    Multiple suppliers catalogs usage
+                </h2>
+                <div class="catalog__body">
+                    <img class="catalog__illustration"
+                         srcset="../content/catalog@2x.jpg 2x"
+                         src="../content/catalog.jpg"
+                         width="466"
+                         height="362"
+                         alt=""
+                    >
+                    <div class="catalog__description wysiwyg wysiwyg--dense">
+                        <p>Combine new sets of products using many suppliers catalogs, price lists, promotions, commercial proposals, – and share them with your partners.</p>
+                        <p>The dynamic data model allows you to forget about the need to update products: they will be continuously updated by the supplier.</p>
+                        <p>Business proposals generation has never been faster and&nbsp;easier.</p>
+                    </div>
                 </div>
             </div>
         </section>
