--- a/development/styles/_html.css
+++ b/development/styles/_html.css
@@ -1,3 +1,10 @@
 html {
+    min-width: 1240px;
     overflow-y: scroll;
+}
+
+@media (max-width: 599px) {
+    html {
+        min-width: 320px;
+    }
 }
