--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -11,3 +11,6 @@
 @import url("_sharing.css");
 @import url("_start.css");
 @import url("_catalog.css");
+@import url("_logo.css");
+@import url("_header.css");
+@import url("_footer.css");
