--- a/development/styles/_button.css
+++ b/development/styles/_button.css
@@ -1,23 +1,40 @@
 .button {
     display: inline-block;
     vertical-align: top;
+    padding: 15px 48px;
     border: none;
-    padding: 11px 14px;
-    background-color: red;
-    border-radius: 4px;
+    background-color: var(--action);
+    border-radius: 15px;
     font-family: inherit;
-    font-size: 12px;
-    line-height: 18px;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 36px;
     color: #FFFFFF;
     text-align: center;
     text-decoration: none;
     white-space: nowrap;
     cursor: pointer;
+    transition: background-color var(--transition-hover);
 }
 
 .button:hover {
-    background: blue;
-    color: #EEEEEE;
+    background-color: #0A93DA;
+}
+
+
+.button:active {
+    transform: translateY(1px);
+}
+
+
+.button--inverted {
+    background-color: #FFFFFF;
+    box-shadow: 0 6px 24px rgba(84, 5, 134, 0.3);
+    color: #000000;
+}
+
+.button--inverted:hover {
+    background-color: #EEEEEE;
 }
 
 
