--- a/development/styles/_root.css
+++ b/development/styles/_root.css
@@ -5,6 +5,9 @@
     --container-padding: 40px;
     --base-font-size: 20px;
     --base-line-height: 29px;
+    --action: #0B80BD;
+    --action-hover: #0A93DA;
+    --transition-hover: 0.1s ease;
 }
 /* stylelint-enable declaration-colon-space-after */
 
