--- a/development/styles/_hero.css
+++ b/development/styles/_hero.css
@@ -64,7 +64,7 @@
         }
     }
 
-
+    /* картинка у нас мас 1864px */
     @media (min-width: 1864px) {
         .hero__summary {
             background-size: 100% auto;
@@ -112,4 +112,126 @@
                         margin-top: 24px;
                         margin-bottom: 0;
                     }
+
+
+
+@media (max-width: 599px) {
+
+    .hero {
+        /*position: relative;*/
+    }
+        .hero__head {
+            position: static;
+            min-height: 220px; /* фон */
+            padding-top: 30px;
+            /*text-align: center;*/
+            background-image: url("../images/hero-smartphone-head.svg");
+            background-size: 618px 220px;
+            /*background-repeat: no-repeat;*/
+            /*background-position: center top;*/
+        }
+            .hero__head-wrap {
+
+            }
+                .hero__pre-heading {
+                    /*font-family: var(--font-headings);*/
+                    /*font-weight: bold;*/
+                    font-size: 16px;
+                    line-height: 22px;
+                }
+
+                .hero__heading {
+                    margin-top: 3px;
+                    /*margin-bottom: 0;*/
+                    /*font-family: var(--font-headings);*/
+                    /*font-weight: bold;*/
+                    font-size: 36px;
+                    line-height: 43px;
+                }
+
+                @media (max-width: 399px) {
+                    .hero__heading {
+                        font-size: 34px;
+                        line-height: 40px;
+                    }
+                }
+
+                .hero__description {
+                    /*max-width: 826px;*/
+                    margin-top: 18px;
+                    /*margin-left: auto;*/
+                    /*margin-right: auto;*/
+                    /*font-weight: 500;*/
+                    font-size: 16px;
+                    line-height: 27px;
+                }
+
+                .hero__submit {
+                    margin-top: 55px;
+                    width: 100%;
+                }
+                    .hero__submit.shadow,
+                    .hero__submit .shadow,
+                    .hero__submit .button {
+                        width: 100%;
+                    }
+
+        .hero__summary {
+            min-height: 366px;
+            padding-top: 220px;
+            padding-bottom: 81px;
+            background-image: url("../images/hero-smartphone-summary.jpg");
+            background-size: 586px 366px;
+            /*background-repeat: no-repeat;*/
+            /*background-position: center top;*/
+        }
+
+        @media (min-resolution: 2dppx) {
+            .hero__summary {
+                background-image: url("../images/hero-smartphone-summary@2x.jpg");
+            }
+        }
+
+        /* картинка у нас мас 586px */
+        @media (min-width: 586px) {
+            .hero__summary {
+                background-size: 100% auto;
+            }
+        }
+            .hero__summary-wrap {
+
+            }
+                .hero__panel {
+                    display: block;
+                    /*align-items: flex-start;*/
+                    /*gap: 40px;*/
+                    /*padding: 32px 48px;*/
+                    padding: 24px var(--container-padding);
+                    /*border-radius: 18px;*/
+                    /*background: linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.71));*/
+                    /*box-shadow: 0 12px 24px rgba(20, 20, 43, 0.04), 0 -2px 4px rgba(20, 20, 43, 0.02), 0 22px 24px rgba(74, 58, 255, 0.03);*/
+                }
+                    .hero__column {
+                        margin-top: 58px;
+                        /*flex-grow: 1;*/
+                        /*flex-basis: 0;*/
+                    }
+
+                    .hero__column:first-child {
+                        margin-top: 0;
+                    }
+                        .hero__sub-heading {
+                            /*margin-top: 0;*/
+                            /*margin-bottom: 0;*/
+                            /*font-family: var(--font-headings);*/
+                            /*font-weight: bold;*/
+                            font-size: 20px;
+                            line-height: 27px;
+                        }
+
+                        .hero__features-list {
+                            /*margin-top: 24px;*/
+                            /*margin-bottom: 0;*/
+                        }
+}
 
