--- a/development/styles/_shadow.css
+++ b/development/styles/_shadow.css
@@ -13,7 +13,7 @@
         display: block;
         width: 352px;
         height: 182px;
-        background-image: url("../images/shadow.svg");
+        background-image: url("../images/shadow-desktop.svg");
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center center;
@@ -22,3 +22,33 @@
     .shadow .button {
         position: relative;
     }
+
+
+
+@media (max-width: 599px) {
+
+    .shadow {
+        /*position: relative;*/
+        /*display: inline-block;*/
+        /*vertical-align: top;*/
+    }
+        .shadow::before {
+            /*content: "";*/
+            /*position: absolute;*/
+            /*left: 50%;*/
+            /*top: 50%;*/
+            margin-left: -249px;
+            /*margin-top: -66px;*/
+            /*display: block;*/
+            width: 498px;
+            height: 182px;
+            background-image: url("../images/shadow-smartphone.svg");
+            /*background-size: contain;*/
+            /*background-repeat: no-repeat;*/
+            /*background-position: center center;*/
+        }
+
+        .shadow .button {
+            /*position: relative;*/
+        }
+}
