--- a/development/styles/_catalog.css
+++ b/development/styles/_catalog.css
@@ -1,7 +1,7 @@
 .catalog {
     padding-top: 118px;
     padding-bottom: 141px;
-    background-color: #0B80BD;
+    background-color: #098BC5;
     color: #FFFFFF;
 }
     .catalog__wrap {
