--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -17,3 +17,6 @@
 @import url("_hero.css");
 @import url("_shadow.css");
 @import url("_list.css");
+@import url("_truth.css");
+@import url("_feature.css");
+@import url("_badge.css");
