--- a/development/styles/_badge.css
+++ b/development/styles/_badge.css
@@ -11,14 +11,45 @@
     white-space: nowrap;
 }
 
-.badge--yellow {
+.badge--stats {
     background-color: #F4DA56;
 }
 
-.badge--pink {
+.badge--ai {
     background-color: #DE5BFF;
 }
 
-.badge--blue {
+.badge--dealers {
     background-color: #548AEE;
 }
+
+
+@media (max-width: 599px) {
+
+    .badge {
+        /*display: inline-block;*/
+        /*vertical-align: top;*/
+        /*padding: 5px 10px;*/
+        padding: 3px 8px;
+        /*border-radius: 13px;*/
+        /*font-family: var(--font-headings);*/
+        /*font-weight: bold;*/
+        font-size: 11px;
+        /*line-height: 16px;*/
+        /*color: #FFFFFF;*/
+        /*white-space: nowrap;*/
+    }
+
+    .badge--stats {
+        /*background-color: #F4DA56;*/
+    }
+
+    .badge--ai {
+        /*background-color: #DE5BFF;*/
+    }
+
+    .badge--dealers {
+        /*background-color: #548AEE;*/
+    }
+}
+
