--- a/development/styles/_feature.css
+++ b/development/styles/_feature.css
@@ -44,6 +44,7 @@
     .feature--pointed::after {
         content: "";
         position: absolute;
+        z-index: 10;
         left: 100%;
         margin-left: -7px;
         top: 24px;
@@ -60,3 +61,73 @@
             background-image: url("../images/feature-pointer@2x.png");
         }
     }
+
+
+
+@media (max-width: 599px) {
+
+    .feature {
+        /*position: relative;*/
+        /*display: inline-flex;*/
+        /*vertical-align: top;*/
+        /*border: 1px solid currentColor;*/
+        /*border-radius: 22px;*/
+        padding: 3px 15px;
+        /*font-family: var(--font-headings);*/
+        /*font-weight: bold;*/
+        font-size: 16px;
+        line-height: 22px;
+        /*color: var(--action);*/
+        /*white-space: nowrap;*/
+    }
+        .feature__tag {
+            margin-left: 12px;
+        }
+
+        .feature__tag + .feature__tag {
+            margin-left: 8px;
+        }
+
+        .feature__tag:last-child {
+            margin-right: -12px;
+        }
+
+        .feature__sparkles {
+            width: 22px;
+            height: 22px;
+            margin-left: 8px;
+            /*text-indent: 200%;*/
+            /*white-space: nowrap;*/
+            /*overflow: hidden;*/
+            /*background-image: url("../images/feature-sparkles.svg");*/
+            /*background-size: contain;*/
+            /*background-repeat: no-repeat;*/
+            /*background-position: center center;*/
+        }
+
+
+    .feature--pointed {
+
+    }
+        .feature--pointed::after {
+            /*content: "";*/
+            /*position: absolute;*/
+            /*z-index: 10;*/
+            /*left: 100%;*/
+            margin-left: 5px;
+            top: auto;
+            bottom: -3px;
+            width: 105px;
+            height: 92px;
+            background-image: url("../images/feature-pointer-smartphone.png");
+            /*background-size: contain;*/
+            /*background-repeat: no-repeat;*/
+            /*background-position: center center;*/
+        }
+
+        @media (min-resolution: 2dppx) {
+            .feature--pointed::after {
+                background-image: url("../images/feature-pointer-smartphone@2x.png");
+            }
+        }
+}
