--- a/development/styles/_truth.css
+++ b/development/styles/_truth.css
@@ -1,3 +1,104 @@
 .truth {
+    padding-top: 112px;
+    padding-bottom: 39px;
+}
+    .truth__heading {
+        margin-top: 0;
+        margin-bottom: 0;
+        text-align: center;
+    }
 
+    .truth__description {
+        margin-top: 10px;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 34px;
+        text-align: center;
+    }
+
+    .truth__body {
+        margin-top: 37px;
+        display: flex;
+        align-items: flex-start;
+        gap: 41px;
+        padding-left: 32px;
+    }
+        .truth__preview {
+
+        }
+            .truth__illustration {
+                vertical-align: top;
+                flex-shrink: 0;
+            }
+
+        .truth__content {
+            margin-top: 45px;
+            flex-grow: 1;
+        }
+            .truth__list {
+                display: flex;
+                align-items: flex-start;
+                flex-wrap: wrap;
+                gap: 8px;
+            }
+
+
+
+@media (max-width: 599px) {
+
+    .truth {
+        padding-top: 67px;
+        padding-bottom: 63px;
+    }
+        .truth__heading {
+            /*margin-top: 0;*/
+            /*margin-bottom: 0;*/
+            /*text-align: center;*/
+        }
+
+        .truth__description {
+            margin-top: 12px;
+            font-weight: normal;
+            font-size: 16px;
+            line-height: 23px;
+            /*text-align: center;*/
+        }
+
+        .truth__body {
+            margin-top: 40px;
+            display: block;
+            /*align-items: flex-start;*/
+            /*gap: 41px;*/
+            padding-left: 0;
+        }
+            .truth__preview {
+                margin-left: calc(-1 * var(--container-padding));
+                margin-right: calc(-1 * var(--container-padding));
+                overflow: hidden;
+            }
+                .truth__illustration {
+                    width: calc(100% + 14px); /* хотим чтобы картинка уходила вправо на 14px, за экран */
+                    height: auto;
+                    /*vertical-align: top;*/
+                    /*flex-shrink: 0;*/
+                }
+
+            .truth__content {
+                margin-top: 26px;
+                /*flex-grow: 1;*/
+                max-width: 360px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+                .truth__list {
+                    margin-left: calc(-1 * var(--container-padding));
+                    margin-right: calc(-1 * var(--container-padding));
+                    padding-left: var(--container-padding);
+                    padding-right: var(--container-padding);
+                    overflow-x: auto;
+                    /*display: flex;*/
+                    /*align-items: flex-start;*/
+                    /*flex-wrap: wrap;*/
+                    /*gap: 8px;*/
+                }
 }
