--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -23,3 +23,4 @@
 @import url("_desktop-only.css");
 @import url("_smartphone-only.css");
 @import url("_hide-scrollbar.css");
+@import url("_sales.css");
