--- a/development/styles/_root.css
+++ b/development/styles/_root.css
@@ -5,6 +5,7 @@
     --container-padding: 40px;
     --base-font-size: 20px;
     --base-line-height: 29px;
+    --background-aspect: #0B80BD;
     --action: #0B80BD;
     --action-hover: #098BC5;
     /*098 BC5*/
