clean up benefits navigation and animation

--- a/development/styles/_button.css
+++ b/development/styles/_button.css
@@ -15,6 +15,7 @@
     white-space: nowrap;
     cursor: pointer;
     transition: background-color var(--transition-hover);
+    user-select: none;
 }
 
 .button:hover {
