--- a/development/styles/_benefits.css
+++ b/development/styles/_benefits.css
@@ -24,16 +24,32 @@
                 border-radius: 38px;
                 font-family: var(--font-headings);
                 font-weight: bold;
-                font-size: 32px;
+                font-size: 30px;
                 line-height: 44px;
                 cursor: pointer;
+                white-space: nowrap;
+                transition: background-color var(--transition-hover),
+                            color var(--transition-hover);
+                user-select: none;
             }
 
-            .benefits__tag--current {
+            @media (min-width: 1260px) {
+                .benefits__tag {
+                    font-size: 32px;
+                }
+            }
+
+            .benefits__tag:hover {
+                background-color: #F3F3F3;
+            }
+
+            .benefits__tag--current,
+            .benefits__tag--current:hover {
                 background-color: var(--background-aspect);
                 color: #FFFFFF;
                 cursor: default;
             }
+
 
     .benefits__body {
         margin-top: 24px;
@@ -42,8 +58,14 @@
             display: none;
         }
 
+        @keyframes benefits {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
         .benefits__item--current {
             display: block;
+            animation: benefits 0.3s ease;
         }
             .benefits__screen {
                 border-radius: 20px;
@@ -80,8 +102,6 @@
                 .benefits__screenshot {
                     vertical-align: top;
                 }
-
-
 
 
     .benefits__item--for-distributor-manufacturer {
