--- a/development/styles/_shadow.css
+++ b/development/styles/_shadow.css
@@ -13,7 +13,7 @@
         display: block;
         width: 352px;
         height: 182px;
-        background-image: url("../images/shadow-desktop.svg");
+        background-image: url("../vectors/shadow-desktop.svg");
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center center;
@@ -42,7 +42,7 @@
             /*display: block;*/
             width: 498px;
             height: 182px;
-            background-image: url("../images/shadow-smartphone.svg");
+            background-image: url("../vectors/shadow-smartphone.svg");
             /*background-size: contain;*/
             /*background-repeat: no-repeat;*/
             /*background-position: center center;*/
