--- a/development/styles/style.css
+++ b/development/styles/style.css
@@ -26,3 +26,6 @@
 @import url("_sales.css");
 @import url("_cta.css");
 @import url("_benefits.css");
+@import url("_numbers.css");
+@import url("_accent.css");
+@import url("_nobr.css");
