--- a/development/styles/_root.css
+++ b/development/styles/_root.css
@@ -6,9 +6,9 @@
     --base-font-size: 20px;
     --base-line-height: 29px;
     --background-aspect: #0B80BD;
+    --alternative: #E7E7E7;
     --action: #0B80BD;
     --action-hover: #098BC5;
-    /*098 BC5*/
     --transition-hover: 0.1s ease;
 }
 /* stylelint-enable declaration-colon-space-after */
