--- a/development/styles/_root.css
+++ b/development/styles/_root.css
@@ -5,11 +5,13 @@
     --container-padding: 40px;
     --base-font-size: 20px;
     --base-line-height: 29px;
-    --background-aspect: #0B80BD;
+    --background-accent: #0B80BD;
     --alternative: #E7E7E7;
     --action: #0B80BD;
     --action-hover: #098BC5;
+    --gray-1: #333333;
     --transition-hover: 0.1s ease;
+    --max-text-width: 717px;
 }
 /* stylelint-enable declaration-colon-space-after */
 
