--- a/development/styles/_basics.css
+++ b/development/styles/_basics.css
@@ -1,4 +1,5 @@
 .basics {
+    --vertical-tile-padding: 64px;
     --horizontal-tile-padding: 54px;
 }
 
@@ -26,7 +27,7 @@
         grid-template-columns: repeat(5, 1fr);
     }
         .basics__tile {
-            padding: 64px var(--horizontal-tile-padding);
+            padding: var(--vertical-tile-padding) var(--horizontal-tile-padding);
             border-radius: 15px;
             color: var(--gray-1);
         }
@@ -99,7 +100,7 @@
                     left: 9px;
                     width: 70.572%;
                     height: auto;
-                    margin: 64px calc((100% - 70.572%) / 2) -64px;
+                    margin: 64px calc((100% - 70.572%) / 2) calc(-1 * var(--vertical-tile-padding));
                 }
 
                 .basics__omnichanelling-video {
@@ -117,5 +118,132 @@
         font-size: 20px;
         line-height: 34px;
     }
+
+
+@media (max-width: 599px) {
+
+    .basics {
+        --vertical-tile-padding: 32px;
+        --horizontal-tile-padding: 35px;
+    }
+
+    .basics {
+        padding-top: 45px;
+        padding-bottom: 51px;
+    }
+        .basics__heading {
+            /*margin-top: 0;*/
+            /*margin-bottom: 0;*/
+        }
+
+        .basics__description {
+            margin-top: 8px;
+            font-size: 16px;
+            line-height: 23px;
+        }
+
+        .basics__lists {
+            margin-top: 23px;
+            display: block;
+            /*gap: 20px;*/
+            /*grid-template-columns: repeat(5, 1fr);*/
+        }
+            .basics__tile {
+                padding-top: 32px;
+                padding-bottom: 32px;
+                /*padding: var(--vertical-tile-padding) var(--horizontal-tile-padding);*/
+                /*border-radius: 15px;*/
+                /*color: var(--gray-1);*/
+            }
+
+            .basics__tile--meaning {
+                /*grid-column: 1 / 4;*/
+                /*grid-row: 1 / 3;*/
+                /*background-color: var(--background-accent);*/
+                /*color: #FFFFFF;*/
+            }
+
+            .basics__tile--data-model {
+                /*grid-column: 1 / 4;*/
+                /*grid-row: 3 / 4;*/
+                /*background-color: #FAEEE7;*/
+            }
+
+            .basics__tile--dealer-network {
+                /*grid-column: 1 / 4;*/
+                /*grid-row: 4 / 5;*/
+                /*background-image: url("../vectors/basics-item-dealer-network.svg");*/
+                /*background-size: 808px 900px;*/
+                /*background-repeat: no-repeat;*/
+                /*background-position: center top;*/
+            }
+
+            .basics__tile--integrations {
+                /*grid-column: 4 / 6;*/
+                /*grid-row: 1 / 2;*/
+                /*background-color: #F3F3F3;*/
+                /*padding-bottom: 135px;*/
+            }
+
+            .basics__tile--omnichanelling {
+                /*grid-column: 4 / 6;*/
+                /*grid-row: 2 / 5;*/
+                /*background-color: #BFC6EF;*/
+            }
+
+            .basics__tile--user-data {
+                /*grid-column: 1 / 3;*/
+                /*grid-row: 5 / 6;*/
+                /*background-color: #F3F3F3;*/
+            }
+
+            .basics__tile--quoting {
+                /*grid-column: 3 / 6;*/
+                /*grid-row: 5 / 6;*/
+                /*background-color: var(--background-accent);*/
+                /*color: #FFFFFF;*/
+            }
+                .basics__sub-heading {
+                    /*margin-top: 0;*/
+                    /*margin-bottom: 0;*/
+                    font-size: 24px;
+                    line-height: 32px;
+                    /*font-family: var(--font-headings);*/
+                    /*font-weight: bold;*/
+                }
+
+                .basics__text {
+                    /*margin-top: 32px;*/
+                    /*font-weight: 500;*/
+                    font-size: 16px;
+                    line-height: 27px;
+                }
+                    .basics__illustration {
+                        /*vertical-align: top;*/
+                        position: static;
+                        left: 0;
+                        width: 100%;
+                        /*height: auto;*/
+                        margin-top: 20px;
+                        margin-left: 0;
+                        margin-right: 0;
+                    }
+
+                    .basics__omnichanelling-video {
+                        /*margin-top: 62px;*/
+                        /*margin-left: calc(-1 * var(--horizontal-tile-padding));*/
+                        /*margin-right: calc(-1 * var(--horizontal-tile-padding));*/
+                        /*width: calc(100% + 2 * var(--horizontal-tile-padding));*/
+                        /*height: auto;*/
+                    }
+
+        .basics__footer {
+            /*margin-top: 42px;*/
+            /*max-width: var(--max-text-width);*/
+            /*font-weight: 500;*/
+            /*font-size: 20px;*/
+            /*line-height: 34px;*/
+        }
+}
 
 
